# ppx_expect

./: CHANGES.md  LICENSE.md  META.ab  Makefile  README.mdx  README.org  _oasis  _tags  developer_guide.txt  install.ml  myocamlbuild.ml  opam  ppx_expect.opam
.github/workflows/: workflow.yaml
as_ppx/: ppx.ml
collector/: dune  expect_test_collector.ml  expect_test_collector.mli  expect_test_collector_stubs.c  jbuild  runtime.js
common/: expectation.ml  expectation.mli  file.ml  file.mli  jbuild
config/: dune  expect_test_config.ml  expect_test_config.mli  expect_test_config_intf.ml  jbuild
config/types/: dune  expect_test_config_types.ml  expect_test_config_types_intf.ml
evaluator/: dune  evaluator.ml  jbuild  ppx_expect_evaluator.ml
evaluator/lib/: evaluator.ml  evaluator.mli  expectation.ml  expectation.mli  fnmatch_stub.c  lexer.mli  lexer.mll  reconcile.ml  reconcile.mli
example/: control_chars.ml  dune  escaping.ml  hello_async.ml  import.ml  importing.ml  jbuild  nine.ml  space_nine.ml  tests.ml  three.ml  xnine.ml
expect_payload/: jbuild  ppx_expect_payload.ml  ppx_expect_payload.mli
js-utils/: install_tags.ml
make-corrected-file/: dune  make_corrected_file.ml  make_corrected_file.mli
make-corrected-file/kernel/: dune  make_corrected_file_kernel.ml  make_corrected_file_kernel.mli
matcher/: choose_tag.ml  cst.ml  cst.mli  dune  fmt.ml  fmt.mli  import.ml  jbuild  lexer.mli  lexer.mll  matcher.ml  matcher.mli  reconcile.ml  reconcile.mli
namespace_wrappers/: ocaml_re.mli
negative-tests/: chdir.ml.corrected.expected  double_run.ml  dune  exact.ml  exact.ml.corrected.expected  exn.ml  exn.ml.corrected.expected  exn_and_trailing.ml  exn_and_trailing.ml.corrected.expected  exn_missing.ml  exn_missing.ml.corrected.expected  flexible.ml  flexible.ml.corrected.expected  function_with_distinct_outputs.ml.corrected.expected  functor.ml  functor.ml.corrected.expected  glob.ml.corrected.expected  jbuild  missing.ml  missing.ml.corrected.expected  need_exact.ml  need_exact.ml.corrected.expected  pending_output.ml  pending_output.ml.corrected.expected  regexp.ml  regexp.ml.corrected.expected  spacing.ml  spacing.ml.corrected.expected  tag.ml  tag.ml.corrected.expected  test-output.expected  trailing.ml  trailing.ml.corrected.expected
negative-tests/cinaps/: expect_test_negative_tests_cinaps.ml
negative-tests/disabling/: jbuild
negative-tests/exit-in-test/: jbuild
runtime/: current_file.ml  current_file.mli  dune  expectation.ml  expectation.mli  expectation_intf.ml  output.ml  output.mli  payload.ml  payload.mli  payload_intf.ml  ppx_expect_runtime.ml  ppx_expect_runtime.mli  ppx_expect_runtime_stubs.c  runtime.js  runtime.wat  test_block.ml  test_block.mli  test_node.ml  test_node.mli  test_spec.ml  test_spec.mli  test_spec_intf.ml  types.ml  types.mli  write_corrected_file.ml  write_corrected_file.mli
runtime/types/: dune  ppx_expect_runtime_types.ml  ppx_expect_runtime_types.mli
src/: dune  expect_extension.ml  expect_extension.mli  jbuild  lifter.ml  main.ml  ppx_expect.ml  ppx_expect.mli
test/: bad_test.ml  current_test_has_output_that_does_not_match_exn.ml  dune  escaped_strings.ml  jbuild  non_flushing.c  ppx_expect_test.ml  string_extension_syntax.ml  test_expectation.ml  test_matcher.ml  test_output.ml  test_sanitize.ml  uncaught_exn.ml  unflushed_stubs_output.ml  unidiomatic_syntax.ml  warning_40.ml  zero_alloc_attr.ml
test/duplicated-by-ppx/: dune  duplicated_expect.ml  expect_test_copied_by_ppx_tests.ml
test/duplicated-by-ppx/negative-tests/: dune  duplicated_expect.ml  duplicated_expect.ml.corrected.expected  duplicated_inconsistent.ml  duplicated_inconsistent.ml.corrected.expected  test-output.expected
test/example/: chdir.ml  control_chars.ml  dune  expect_test_examples.ml  space_nine.ml  tabs.ml.in  tests.ml  xnine.ml
test/expect-if-reached/: dune  expect_test_if_unreachable_tests.ml  passing_tests.ml
test/explicit-strict-false/: dune  expect_test_explicit_no_strict_indent.ml  nine.ml
test/explicit-strict-true/: dune  nine.ml
test/explicit-strict-true/negative-test/: dune  nine.ml  nine.ml.corrected.expected  test-output.expected
test/force-drop/: dune  expect_test_force_drop_integration.ml  test-verbose-mode.t
test/negative-tests/: chdir.ml  chdir.ml.corrected.expected  comment.ml  comment.ml.corrected.expected  current_test_has_output_that_does_not_match_exn.ml  current_test_has_output_that_does_not_match_exn.ml.corrected.expected  dune  escaped_strings.ml  escaped_strings.ml.corrected.expected  exact.ml  exact.ml.corrected.expected  exn.ml  exn.ml.corrected.expected  exn_and_trailing.ml.corrected.expected  exn_missing.ml  expectation.ml  expectation.ml.corrected.expected  flexible.ml  flexible.ml.corrected.expected  function_with_distinct_outputs.ml  function_with_distinct_outputs.ml.corrected.expected  functor.ml  functor.ml.corrected.expected  missing.ml  missing.ml.corrected.expected  nine.ml  nine.ml.corrected.expected  nonempty_stack.ml  nonempty_stack.ml.corrected.expected  normal_strings.ml  normal_strings.ml.corrected.expected  similar_distinct_outputs.ml  similar_distinct_outputs.ml.corrected.expected  spacing.ml  spacing.ml.corrected.expected  string_extension_syntax.ml  string_extension_syntax.ml.corrected.expected  tag.ml  tag.ml.corrected.expected  test-output.expected  (+9 more)
test/negative-tests/cinaps/: dune  expect_test_negative_tests_cinaps.ml  expect_test_negative_tests_cinaps.mli
test/negative-tests/disabling/: dune
test/negative-tests/disabling/lib/: dune  expect_test_disabling_test_lib.ml  test_ref.ml  test_ref.mli
test/negative-tests/exit-in-test/: dune  test.ml
test/negative-tests/exit-in-test/broken-test/: dune  test.ml
test/negative-tests/for-mdx/: dune  foo.ml  foo.ml.corrected.expected  mdx_cases.ml  mdx_cases.ml.corrected.expected  test-output.expected
test/negative-tests/nesting/: dune  expect_test_nesting_tests.ml  nested.ml  nested.ml.corrected.expected  test-output.expected
test/no-output-patterns/: dune  jbuild
test/source-tree-root/: dune  setup.sh  test-verbose-mode.t  (+1 more)
(+26 files in other folders)
