opam-version: "2.0"
version: "v0.17.2"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_expect"
bug-reports: "https://github.com/janestreet/ppx_expect/issues"
dev-repo: "git+https://github.com/janestreet/ppx_expect.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_expect/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"           {>= "5.1.0"}
  "base"            {>= "v0.17" & < "v0.18"}
  "ppx_here"        {>= "v0.17" & < "v0.18"}
  "ppx_inline_test" {>= "v0.17" & < "v0.18"}
  "stdio"           {>= "v0.17" & < "v0.18"}
  "dune"            {>= "3.11.0"}
  "ppxlib"          {>= "0.28.0"}
]
available: arch != "arm32" & arch != "x86_32"
conflicts: [
  "js_of_ocaml-compiler" {< "5.8"}
]

synopsis: "Cram like framework for OCaml"
description: "
Part of the Jane Street's PPX rewriters collection.
"
