opam-version: "2.0"
version: "v0.16.1"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_expect"
bug-reports: "https://github.com/janestreet/ppx_expect/issues"
dev-repo: "git+https://github.com/janestreet/ppx_expect.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_expect/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"           {>= "4.14.0"}
  "base"            {>= "v0.16" & < "v0.17"}
  "ppx_here"        {>= "v0.16" & < "v0.17"}
  "ppx_inline_test" {>= "v0.16" & < "v0.17"}
  "stdio"           {>= "v0.16" & < "v0.17"}
  "dune"            {>= "2.0.0"}
  "ppxlib"          {>= "0.28.0"}
  "re"              {>= "1.8.0"}
]
conflicts: [
  "js_of_ocaml-compiler" {< "5.8"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Cram like framework for OCaml"
description: "
Part of the Jane Street's PPX rewriters collection.
"
