(library
 (foreign_stubs
  (language c)
  (names ppx_expect_runtime_stubs))
 (name ppx_expect_runtime)
 (public_name ppx_expect.runtime)
 (libraries base stdio ppx_inline_test.runtime-lib make_corrected_file
   expect_test_config)
 (js_of_ocaml
  (javascript_files runtime.js))
 (preprocess no_preprocessing))
