(library
 (foreign_stubs
  (language c)
  (names ppx_expect_runtime_stubs))
 (name ppx_expect_runtime)
 (public_name ppx_expect.runtime)
 (libraries base basement expect_test_config expect_test_config_types
   make_corrected_file portable ppx_expect_runtime_types
   ppx_inline_test.runtime-lib stdio)
 (js_of_ocaml
  (javascript_files runtime.js))
 (preprocess
  (pps ppx_fuelproof))
 (wasm_of_ocaml
  (javascript_files runtime.js)
  (wasm_files runtime.wat)))
