(library
 (name ppx_expect)
 (public_name ppx_expect)
 (kind ppx_rewriter)
 (libraries base ppxlib ppx_expect_runtime ppx_inline_test
   ppx_inline_test.libname ppx_here.expander)
 (ppx_runtime_libraries ppx_expect.runtime ppx_expect.config)
 (preprocess
  (pps ppxlib.metaquot))
 (inline_tests.backend
  (runner_libraries ppx_expect.evaluator)
  (extends ppx_inline_test)))
