(library
 (name expect_test_explicit_strict_indent_negative)
 (libraries ppx_expect_runtime)
 (preprocess
  (pps ppx_expect -expect-test-strict-indentation=true)))

(rule
 (deps
  (:first_dep ./inline_tests_runner)
  ./inline_tests_runner.exe
  %{workspace_root}/bin/apply-style
  jbuild
  (glob_files *.ml))
 (targets nine.ml.corrected test-output)
 (action
  (bash
    "\nrm -f *.ml.corrected 2>/dev/null\n! %{first_dep} -no-color > test-output 2>&1\nfor f in *.ml.corrected\ndo\n  %{workspace_root}/bin/apply-style \\\n    -directory-config jbuild \\\n    -original-file $(basename $f .corrected) \\\n    - < $f > $f.tmp\n  mv $f.tmp $f\ndone\n")))

(rule
 (alias runtest)
 (deps nine.ml.corrected.expected nine.ml.corrected)
 (action
  (bash "diff -a %{deps}")))

(rule
 (alias runtest)
 (deps test-output.expected test-output)
 (action
  (bash "diff -a %{deps}")))
