(library
 (name expect_test_explicit_strict_indent_negative)
 (libraries ppx_expect_runtime)
 (preprocess
  (pps ppx_expect -expect-test-strict-indentation=true)))

(alias
 (name test-runner-runtime-deps)
 (deps
  ./inline_tests_runner
  ./inline_tests_runner.exe
  (glob_files *.ml)))

(rule
 (deps
  (alias test-runner-runtime-deps)
  %{workspace_root}/bin/apply-style
  jbuild)
 (targets nine.ml.corrected test-output)
 (action
  (bash
    "\nrm -f *.ml.corrected 2>/dev/null\n! ./inline_tests_runner -no-color > test-output 2>&1\nfor f in %{targets}\ndo\n  if [[ $f == *.corrected ]]\n  then\n    if [[ -e $f ]]\n    then\n      %{workspace_root}/bin/apply-style \\\n        -directory-config jbuild \\\n        -original-file $(basename $f .corrected) \\\n        - < $f > $f.tmp\n      mv $f.tmp $f\n    else\n      echo \"=== Failed to generate corrected file ===\" > $f\n    fi\n  fi\ndone\n")))

(rule
 (alias runtest)
 (deps nine.ml.corrected.expected nine.ml.corrected)
 (action
  (bash "diff -a %{deps}")))

(rule
 (alias runtest)
 (deps test-output.expected test-output)
 (action
  (bash "diff -a %{deps}")))
