(library
 (name expect_test_nesting_tests)
 (libraries)
 (preprocess
  (pps ppx_jane)))

(rule
 (deps
  (:first_dep ./inline_tests_runner)
  ./inline_tests_runner.exe
  %{workspace_root}/bin/apply-style
  jbuild
  (glob_files *.ml))
 (targets nested.ml.corrected test-output)
 (action
  (bash
    "\nrm -f *.ml.corrected 2>/dev/null\n! OCAMLRUNPARAM=b=0 %{first_dep} -require-tag fast-flambda -no-color > test-output 2>&1\nfor f in *.ml.corrected\ndo\n  %{workspace_root}/bin/apply-style \\\n    -directory-config jbuild \\\n    -original-file $(basename $f .corrected) \\\n    - < $f > $f.tmp\n  mv $f.tmp $f\ndone\n")))

(rule
 (alias runtest)
 (deps nested.ml.corrected.expected nested.ml.corrected)
 (action
  (bash "diff -a %{deps}")))

(rule
 (alias runtest)
 (deps test-output.expected test-output)
 (action
  (bash "diff -a %{deps}")))
