(library
 (name expect_test_nesting_tests)
 (libraries)
 (preprocess
  (pps ppx_jane)))

(alias
 (name test-runner-runtime-deps)
 (deps
  ./inline_tests_runner
  (glob_files *.ml)
  ./inline_tests_runner.exe))

(rule
 (deps
  (alias test-runner-runtime-deps)
  %{workspace_root}/bin/apply-style
  jbuild)
 (targets nested.ml.corrected test-output)
 (action
  (bash
    "\nrm -f *.ml.corrected 2>/dev/null\n! OCAMLRUNPARAM=b=0 ./inline_tests_runner -require-tag fast-flambda -no-color > test-output 2>&1\nfor f in %{targets}\ndo\n  if [[ $f == *.corrected ]]\n  then\n    if [[ -e $f ]]\n    then\n      %{workspace_root}/bin/apply-style \\\n        -directory-config jbuild \\\n        -original-file $(basename $f .corrected) \\\n        - < $f > $f.tmp\n      mv $f.tmp $f\n    else\n      echo \"=== Failed to generate corrected file ===\" > $f\n    fi\n  fi\ndone\n")))

(rule
 (alias runtest)
 (deps nested.ml.corrected.expected nested.ml.corrected)
 (action
  (bash "diff -a %{deps}")))

(rule
 (alias runtest)
 (deps test-output.expected test-output)
 (action
  (bash "diff -a %{deps}")))
